--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "gatsby": "^1.8.10",
     "gatsby-link": "^1.6.5",
     "gatsby-plugin-react-helmet": "^1.0.1",
-    "gatsby-plugin-sass": "^1.0.2"
+    "gatsby-plugin-sass": "^1.0.2",
+    "gatsby-source-filesystem": "^1.4.4",
+    "gatsby-transformer-yaml": "^1.5.4"
   },
   "keywords": [
     "gatsby"
