--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "gatsby-link": "^1.6.5",
     "gatsby-plugin-react-helmet": "^1.0.1",
     "gatsby-plugin-sass": "^1.0.2",
+    "gatsby-remark-copy-linked-files": "^1.5.7",
+    "gatsby-remark-images": "^1.5.10",
+    "gatsby-remark-prismjs": "^1.2.7",
     "gatsby-source-filesystem": "^1.4.4",
+    "gatsby-transformer-remark": "^1.7.6",
     "gatsby-transformer-yaml": "^1.5.4"
   },
   "keywords": [
